# afm_analysis

./: README.md
python/: README.md  pyproject.toml
python/examples/mesh/: mesh.py
python/examples/mfp3d/: mfp3d.py
python/examples/plot/: plot.py
python/src/bric_afm/: __init__.py  image.py  mesh.py  mfp3d.py  operations.py  plot.py  statistics.py  utils.py
python/tests/: test_images.py  test_operations.py
